mail yapılandırma denemesi

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/animate.min.css' | url }}">
     <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | url }}">
     <link rel="stylesheet" href="{{ '/assets/css/font-awesome.min.css' | url }}">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/templatemo-style.css' | url }}">
     <link rel="stylesheet" href="{{ '/assets/css/site.css' | url }}">
     <link rel="stylesheet" href="{{ '/assets/js/slick/slick.css' | url }}">
@@ -163,7 +163,7 @@
       </div>
     </nav>
     <!-- end navigation -->
-
+    {# 
     <div class="socialicon-bar">
       <a href="#" class="facebook">
         <i class="fa fa-facebook"></i>
@@ -180,7 +180,7 @@
       <a href="#" class="instagram">
         <i class="fa fa-instagram"></i>
       </a>
-    </div>
+    </div> #}
 
     {{content | safe}}
 
