--- a/index.njk
+++ b/index.njk
@@ -28,7 +28,7 @@ eleventyNavigation:
     opacity: 1;
   }
 </style>
-
+{# 
 <!-- start home -->
 <section id="home">
   <div class="slider">
@@ -72,7 +72,7 @@ eleventyNavigation:
     </div>
   </div>
 </section>
-<!-- end home -->
+<!-- end home --> #}
 
 <section id="portfolio" style="padding-top: 30px;">
   <p>
