--- a/iletisim.njk
+++ b/iletisim.njk
@@ -111,7 +111,7 @@ layout: layouts/base.njk
         }, 10000);
         
         oData.delete("message");
-        oData.append("subject", "Başvuru Formu");
+        oData.append("subject", "İletişim Formu");
         oData.append("company", "optimalmakina");
         oData.append("message", 
         `${msg}
